fix add dark mode

--- a/public/css/rsuit.less
+++ b/public/css/rsuit.less
@@ -5,3 +5,5 @@
 @screen-lg: 1024px;
 @screen-xl: 1280px;
 @screen-xxl: 1536px;
+
+@enable-dark-mode: true;
